--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "expo-sms": "~14.0.7",
     "expo-speech": "~14.0.7",
     "expo-task-manager": "~14.0.8",
+    "expo-torch": "^0.6.0",
     "expo-web-browser": "~15.0.9",
     "firebase": "^12.4.0",
     "firebase-admin": "^13.5.0",
